# simpleserver

./: .gitignore  CMakeLists.txt  README.md  simpleserver.sln
simpleserver/: connection.cpp  connection.h  connection_manager.cpp  connection_manager.h  header.h  main.cpp  reply.cpp  reply.h  request.h  request_handler.cpp  request_handler.h  request_parser.cpp  request_parser.h  server.cpp  server.h  simpleserver.vcxproj  simpleserver.vcxproj.filters
